--- a/style.css
+++ b/style.css
@@ -40,6 +40,42 @@ body {
 main {
   margin-top: 7em;
   text-align: center;
+  margin-bottom: 5em;
+}
+
+#aprendizado , aside {
+  display: inline-block;
+  width: 49%;
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+#aprendizado {
+  text-align: center;
+  vertical-align: middle;
+}
+
+aside {
+  text-align: center;
+  vertical-align: middle;
+}
+
+#conteudo-aside {
+  vertical-align: middle;
+}
+
+#conteudo-aside img , #conteudo-aside p {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#conteudo-aside img {
+  width: 30%;
+}
+
+#conteudo-aside p {
+  width: 69%;
 }
 
 .bloco-lista {
