--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 #titulo {
-  margin-bottom: 0;
+  margin-bottom: 0.3em;
 }
 
 #navegacao {
@@ -35,17 +35,25 @@ body {
   padding: 1em 0;
   margin: 0;
   border: 0;
+  color: black;
+  text-decoration: none;
+}
+
+.botao-link:hover {
+  background-color: rgb(23, 137, 252);
+  transition: all 0.25s ease-out;
+  text-decoration: none;
+  font-weight: 700;
 }
 
 main {
-  margin-top: 7em;
+  margin-top: 6.78em;
   text-align: center;
   margin-bottom: 5em;
 }
 
 #primeira-parte {
   background-color: rgb(253, 184, 51);
-  margin: 0 0.5em;
 }
 
 #aprendizado , aside {
@@ -78,7 +86,8 @@ aside {
 }
 
 #conteudo-aside img {
-  width: 30%;
+  width: 20%;
+  margin: 1em 0;
 }
 
 #conteudo-aside p {
