--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@ body {
   padding: 0;
   border: 0;
   margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
 }
 
 #cabecalho {
+  color: rgb(253, 251, 251);
   position: fixed;
   top: 0;
   background-color: rgb(41, 110, 180);
@@ -35,7 +38,7 @@ body {
   padding: 1em 0;
   margin: 0;
   border: 0;
-  color: black;
+  color: rgb(253, 251, 251);
   text-decoration: none;
 }
 
@@ -54,6 +57,7 @@ main {
 
 #primeira-parte {
   background-color: rgb(253, 184, 51);
+  font-size: 0.9em;
 }
 
 #aprendizado , aside {
@@ -111,6 +115,7 @@ aside {
 
 .lista li {
   list-style-position: inside;
+  line-height: 1.5em;
 }
 
 footer {
